--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: 5.0
+          context: ./5.0
           platforms: linux/amd64,linux/arm64
           push: true
           tags: jonyhy/redis:5.0
